[project]
name = "sinsajo-diagram-generator"
version = "1.0.0"
description = "Render Excalidraw diagrams to PNG — by Sinsajo Creators"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://www.sinsajocreators.com"
Repository = "https://github.com/lsomarribaprojects/Sinsajo-Image-Generator"
